@@ -1,0 +1,2 @@
+Various statistical, graphics, and data-management functions used by
+the Rcmdr package in the R Commander GUI for R.
