@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:07:38 brook Exp $
+
+SHA1 (R/RcmdrMisc_2.5-1.tar.gz) = 1255ef8b467d0098cee30697b66baaa915f990b2
+RMD160 (R/RcmdrMisc_2.5-1.tar.gz) = c3647a700cc6c2ca8379157f58ee2ebc16b3546a
+SHA512 (R/RcmdrMisc_2.5-1.tar.gz) = 7e5c127626e0fae6dfa7a3193bae99d864e14bffc0731cecb5d94e1dce5a3cf57fa107dd93b0f5fefae5e0c8e690838f6b781794e032821249e453495dfac485
+Size (R/RcmdrMisc_2.5-1.tar.gz) = 30488 bytes
