@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3101 2019/07/31 13:05:34 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3102 2019/07/31 13:07:38 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5058,3 +5058,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added graphics/R-viridis version 0.5.1 [brook 2019-07-31]
 	Added math/R-Formula version 1.2.3 [brook 2019-07-31]
 	Added math/R-RandomFieldsUtils version 0.5.3 [brook 2019-07-31]
+	Added math/R-RcmdrMisc version 2.5.1 [brook 2019-07-31]
